// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`computeApproxPageRank downvote and undo should downvote and undo 1`] = `
Object {
  "author": Object {
    "__v": 0,
    "_id": "[SANITIZED]",
    "airdropTokens": 222,
    "balance": 222,
    "bio": "I love painting",
    "blocked": Array [],
    "blockedBy": Array [],
    "cashedOut": 0,
    "confirmed": false,
    "createdAt": "[SANITIZED]",
    "desktopSubscriptions": Array [],
    "deviceTokens": Array [],
    "email": "bob@bob.com",
    "ethAddress": Array [
      "0xf17f52151EbEF6C7334FAD080c5704D77216b732",
    ],
    "handle": "bob",
    "hashedPassword": "[SANITIZED]",
    "id": "[SANITIZED]",
    "image": "https://yt3.ggpht.com/a/AGF-l7_IPKJORqk1Wo7AR4jMhW15Ma-za_QDlRxMcQ=s900-c-k-c0xffffffff-no-rj-mo",
    "investmentCount": 0,
    "lastFeedNotification": 1970-01-01T00:00:00.000Z,
    "lastVote": "[SANITIZED]",
    "legacyAirdrop": 0,
    "legacyTokens": 0,
    "lockedTokens": 0,
    "messages": 0,
    "name": "Bob",
    "notificationSettings": Object {
      "bet": Object {
        "manual": true,
      },
      "desktop": Object {
        "all": false,
      },
      "email": Object {
        "digest": true,
        "general": false,
        "personal": true,
      },
      "mobile": Object {
        "all": false,
      },
    },
    "onboarding": 0,
    "online": false,
    "password": "test",
    "postCount": 0,
    "profile": Object {
      "name": "Bob",
      "role": "user",
    },
    "referralTokens": 0,
    "relevance": Object {
      "__v": 0,
      "_id": "[SANITIZED]",
      "community": "relevant",
      "communityId": "c00000000000000000000001",
      "createdAt": "[SANITIZED]",
      "degree": 0,
      "deletedCommunity": false,
      "embeddedUser": Object {
        "_id": "[SANITIZED]",
        "handle": "bob",
        "image": "https://yt3.ggpht.com/a/AGF-l7_IPKJORqk1Wo7AR4jMhW15Ma-za_QDlRxMcQ=s900-c-k-c0xffffffff-no-rj-mo",
        "name": "Bob",
      },
      "invites": 0,
      "pagerank": 95.75,
      "pagerankNeg": 0,
      "pagerankRaw": 0.363,
      "pagerankRawNeg": 0,
      "postDegree": 1,
      "relevanceRecord": Array [],
      "reputation": null,
      "role": "user",
      "superAdmin": false,
      "unread": 0,
      "updatedAt": "[SANITIZED]",
      "user": "b00000000000000000000000",
    },
    "role": "user",
    "salt": "[SANITIZED]",
    "token": Object {
      "_id": "[SANITIZED]",
      "role": "user",
    },
    "tokenBalance": 0,
    "topTopics": Array [],
    "updatedAt": "[SANITIZED]",
    "votePower": 1,
    "webOnboard": Object {
      "onboarding": false,
    },
  },
  "post": Object {
    "__v": 0,
    "_id": "[SANITIZED]",
    "body": "awesome post #1!",
    "channel": false,
    "commentCount": 0,
    "community": "relevant",
    "communityId": "c00000000000000000000001",
    "createdAt": "[SANITIZED]",
    "data": Object {
      "__v": 0,
      "_id": "[SANITIZED]",
      "balance": 0,
      "community": "relevant",
      "communityId": "c00000000000000000000001",
      "createdAt": "[SANITIZED]",
      "downVotes": 0,
      "eligibleForReward": false,
      "expectedPayout": 0,
      "hidden": false,
      "isInFeed": false,
      "latestComment": "[SANITIZED]",
      "pagerank": 4.6,
      "pagerankRaw": 0.066,
      "pagerankRawNeg": 0.052,
      "paidOut": false,
      "parentPost": "000000000000000000000003",
      "payOutShare": 0,
      "payout": 0,
      "payoutTime": "[SANITIZED]",
      "post": "000000000000000000000001",
      "postDate": "[SANITIZED]",
      "rank": "[SANITIZED]",
      "relevance": 0,
      "relevanceNeg": 0,
      "repost": false,
      "shares": 0,
      "tags": Array [
        "tag11",
        "tag12",
      ],
      "totalShares": 0,
      "type": "post",
      "upVotes": 0,
      "updatedAt": "[SANITIZED]",
    },
    "downVotes": 0,
    "embeddedUser": Object {
      "_id": "[SANITIZED]",
      "handle": "bob",
      "image": "https://yt3.ggpht.com/a/AGF-l7_IPKJORqk1Wo7AR4jMhW15Ma-za_QDlRxMcQ=s900-c-k-c0xffffffff-no-rj-mo",
      "name": "Bob",
    },
    "flagged": false,
    "flaggedBy": Array [],
    "hidden": false,
    "id": "[SANITIZED]",
    "image": "https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/cute-cat-captions-1563551865.jpg",
    "links": Array [],
    "mentions": Array [],
    "pagerank": 0,
    "paidOut": false,
    "parentPost": "000000000000000000000003",
    "payoutTime": "[SANITIZED]",
    "postDate": "[SANITIZED]",
    "rank": 0,
    "relevance": 0,
    "seenInFeedNumber": 0,
    "tags": Array [
      "tag11",
      "tag12",
    ],
    "title": "postTitle",
    "twitter": false,
    "twitterScore": 0,
    "type": "post",
    "upVotes": 0,
    "updatedAt": "[SANITIZED]",
    "url": "https://example.com/testPost1",
    "user": "b00000000000000000000000",
    "version": "metaRework",
  },
}
`;

exports[`computeApproxPageRank no author should upvote and undo with no author 1`] = `
Object {
  "author": null,
  "post": Object {
    "__v": 0,
    "_id": "[SANITIZED]",
    "body": "awesome post #1!",
    "channel": false,
    "commentCount": 0,
    "community": "relevant",
    "communityId": "c00000000000000000000001",
    "createdAt": "[SANITIZED]",
    "data": Object {
      "__v": 0,
      "_id": "[SANITIZED]",
      "balance": 0,
      "community": "relevant",
      "communityId": "c00000000000000000000001",
      "createdAt": "[SANITIZED]",
      "downVotes": 0,
      "eligibleForReward": false,
      "expectedPayout": 0,
      "hidden": false,
      "isInFeed": false,
      "latestComment": "[SANITIZED]",
      "pagerank": -11.88,
      "pagerankRaw": 0.066,
      "pagerankRawNeg": 0.104,
      "paidOut": false,
      "parentPost": "000000000000000000000003",
      "payOutShare": 0,
      "payout": 0,
      "payoutTime": "[SANITIZED]",
      "post": "000000000000000000000001",
      "postDate": "[SANITIZED]",
      "rank": 0,
      "relevance": 0,
      "relevanceNeg": 0,
      "repost": false,
      "shares": 0,
      "tags": Array [
        "tag11",
        "tag12",
      ],
      "totalShares": 0,
      "type": "post",
      "upVotes": 0,
      "updatedAt": "[SANITIZED]",
    },
    "downVotes": 0,
    "embeddedUser": Object {
      "_id": "[SANITIZED]",
      "handle": "bob",
      "image": "https://yt3.ggpht.com/a/AGF-l7_IPKJORqk1Wo7AR4jMhW15Ma-za_QDlRxMcQ=s900-c-k-c0xffffffff-no-rj-mo",
      "name": "Bob",
    },
    "flagged": false,
    "flaggedBy": Array [],
    "hidden": false,
    "id": "[SANITIZED]",
    "image": "https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/cute-cat-captions-1563551865.jpg",
    "links": Array [],
    "mentions": Array [],
    "pagerank": 0,
    "paidOut": false,
    "parentPost": "000000000000000000000003",
    "payoutTime": "[SANITIZED]",
    "postDate": "[SANITIZED]",
    "rank": 0,
    "relevance": 0,
    "seenInFeedNumber": 0,
    "tags": Array [
      "tag11",
      "tag12",
    ],
    "title": "postTitle",
    "twitter": false,
    "twitterScore": 0,
    "type": "post",
    "upVotes": 0,
    "updatedAt": "[SANITIZED]",
    "url": "https://example.com/testPost1",
    "user": "b00000000000000000000000",
    "version": "metaRework",
  },
}
`;

exports[`computeApproxPageRank upvote and undo should upvote and undo 1`] = `
Object {
  "author": Object {
    "__v": 0,
    "_id": "[SANITIZED]",
    "airdropTokens": 222,
    "balance": 222,
    "bio": "I love painting",
    "blocked": Array [],
    "blockedBy": Array [],
    "cashedOut": 0,
    "confirmed": false,
    "createdAt": "[SANITIZED]",
    "desktopSubscriptions": Array [],
    "deviceTokens": Array [],
    "email": "bob@bob.com",
    "ethAddress": Array [
      "0xf17f52151EbEF6C7334FAD080c5704D77216b732",
    ],
    "handle": "bob",
    "hashedPassword": "[SANITIZED]",
    "id": "[SANITIZED]",
    "image": "https://yt3.ggpht.com/a/AGF-l7_IPKJORqk1Wo7AR4jMhW15Ma-za_QDlRxMcQ=s900-c-k-c0xffffffff-no-rj-mo",
    "investmentCount": 0,
    "lastFeedNotification": 1970-01-01T00:00:00.000Z,
    "lastVote": "[SANITIZED]",
    "legacyAirdrop": 0,
    "legacyTokens": 0,
    "lockedTokens": 0,
    "messages": 0,
    "name": "Bob",
    "notificationSettings": Object {
      "bet": Object {
        "manual": true,
      },
      "desktop": Object {
        "all": false,
      },
      "email": Object {
        "digest": true,
        "general": false,
        "personal": true,
      },
      "mobile": Object {
        "all": false,
      },
    },
    "onboarding": 0,
    "online": false,
    "password": "test",
    "postCount": 0,
    "profile": Object {
      "name": "Bob",
      "role": "user",
    },
    "referralTokens": 0,
    "relevance": Object {
      "__v": 0,
      "_id": "[SANITIZED]",
      "community": "relevant",
      "communityId": "c00000000000000000000001",
      "createdAt": "[SANITIZED]",
      "degree": 0,
      "deletedCommunity": false,
      "embeddedUser": Object {
        "_id": "[SANITIZED]",
        "handle": "bob",
        "image": "https://yt3.ggpht.com/a/AGF-l7_IPKJORqk1Wo7AR4jMhW15Ma-za_QDlRxMcQ=s900-c-k-c0xffffffff-no-rj-mo",
        "name": "Bob",
      },
      "invites": 0,
      "pagerank": 99,
      "pagerankNeg": 0,
      "pagerankRaw": 0.455,
      "pagerankRawNeg": 0,
      "postDegree": 1,
      "relevanceRecord": Array [],
      "reputation": null,
      "role": "user",
      "superAdmin": false,
      "unread": 0,
      "updatedAt": "[SANITIZED]",
      "user": "b00000000000000000000000",
    },
    "role": "user",
    "salt": "[SANITIZED]",
    "token": Object {
      "_id": "[SANITIZED]",
      "role": "user",
    },
    "tokenBalance": 0,
    "topTopics": Array [],
    "updatedAt": "[SANITIZED]",
    "votePower": 1,
    "webOnboard": Object {
      "onboarding": false,
    },
  },
  "post": Object {
    "__v": 0,
    "_id": "[SANITIZED]",
    "body": "awesome post #1!",
    "channel": false,
    "commentCount": 0,
    "community": "relevant",
    "communityId": "c00000000000000000000001",
    "createdAt": "[SANITIZED]",
    "data": Object {
      "__v": 0,
      "_id": "[SANITIZED]",
      "balance": 0,
      "community": "relevant",
      "communityId": "c00000000000000000000001",
      "createdAt": "[SANITIZED]",
      "downVotes": 0,
      "eligibleForReward": false,
      "expectedPayout": 0,
      "hidden": false,
      "isInFeed": false,
      "latestComment": "[SANITIZED]",
      "pagerank": 39.42,
      "pagerankRaw": 0.118,
      "pagerankRawNeg": 0,
      "paidOut": false,
      "parentPost": "000000000000000000000003",
      "payOutShare": 0,
      "payout": 0,
      "payoutTime": "[SANITIZED]",
      "post": "000000000000000000000001",
      "postDate": "[SANITIZED]",
      "rank": "[SANITIZED]",
      "relevance": 0,
      "relevanceNeg": 0,
      "repost": false,
      "shares": 0,
      "tags": Array [
        "tag11",
        "tag12",
      ],
      "totalShares": 0,
      "type": "post",
      "upVotes": 0,
      "updatedAt": "[SANITIZED]",
    },
    "downVotes": 0,
    "embeddedUser": Object {
      "_id": "[SANITIZED]",
      "handle": "bob",
      "image": "https://yt3.ggpht.com/a/AGF-l7_IPKJORqk1Wo7AR4jMhW15Ma-za_QDlRxMcQ=s900-c-k-c0xffffffff-no-rj-mo",
      "name": "Bob",
    },
    "flagged": false,
    "flaggedBy": Array [],
    "hidden": false,
    "id": "[SANITIZED]",
    "image": "https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/cute-cat-captions-1563551865.jpg",
    "links": Array [],
    "mentions": Array [],
    "pagerank": 0,
    "paidOut": false,
    "parentPost": "000000000000000000000003",
    "payoutTime": "[SANITIZED]",
    "postDate": "[SANITIZED]",
    "rank": 0,
    "relevance": 0,
    "seenInFeedNumber": 0,
    "tags": Array [
      "tag11",
      "tag12",
    ],
    "title": "postTitle",
    "twitter": false,
    "twitterScore": 0,
    "type": "post",
    "upVotes": 0,
    "updatedAt": "[SANITIZED]",
    "url": "https://example.com/testPost1",
    "user": "b00000000000000000000000",
    "version": "metaRework",
  },
}
`;
